translation-methods/src/main/java/antlr/JavaGrammarParser.java
// Generated from /Users/snitron/IdeaProjects/tinkoff-edu/mettrans/src/main/java/antlr/JavaGrammar.g4 by ANTLR 4.13.1
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JavaGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, NEW=2, FOR=3, WHILE=4, VOID=5, IMPORT=6, PACKAGE=7, CLASS=8, IF=9, 
		ELSE=10, DIG=11, INTEGER=12, FLOATING=13, PLUS=14, MINUS=15, MULTIPLY=16, 
		DIVIDE=17, EQUAL=18, NEQ=19, GREATEROr_EQ=20, LESSOr_EQ=21, MOD=22, INC=23, 
		DEC=24, UN_NOT=25, BIN_AND=26, BINOr=27, AND=28, OR=29, NOT=30, QUESTION_MARK=31, 
		PUBLIC=32, PRIVATE=33, PROTECTED=34, ABSTRACT=35, FINAL=36, THROWS=37, 
		RETURN=38, STATIC=39, EXTENDS=40, SUPER=41, LBRACKET=42, RBRACKET=43, 
		LSBRACKET=44, RSBRACKET=45, LCBRACKET=46, RCBRACKET=47, LTBRACKET=48, 
		RTBRACKET=49, SEMICOLON=50, EQ=51, DOT=52, COMMA=53, QUOTE=54, WORD=55, 
		WS=56;
	public static final int
		RULE_result = 0, RULE_packageBlock = 1, RULE_importBlock = 2, RULE_variableDefinition = 3, 
		RULE_variableStatement = 4, RULE_objectCall = 5, RULE_arg = 6, RULE_argList = 7, 
		RULE_className = 8, RULE_classModifiers = 9, RULE_notPublicModifiers = 10, 
		RULE_class_static = 11, RULE_inner_classDefinition = 12, RULE_defModifier = 13, 
		RULE_class_var_def = 14, RULE_classDefinition = 15, RULE_constructorDefinition = 16, 
		RULE_functionDefinition = 17, RULE_returnExpression = 18, RULE_funcBlock = 19, 
		RULE_static_var = 20, RULE_expression = 21, RULE_type = 22, RULE_number = 23, 
		RULE_notQuoteWord = 24, RULE_stringLiteral = 25, RULE_varName = 26, RULE_expressionList = 27, 
		RULE_funcType = 28, RULE_funcName = 29, RULE_funcCall = 30, RULE_booleanExpr = 31, 
		RULE_ifBlock = 32, RULE_elseBlock = 33, RULE_ifDefinition = 34, RULE_exprOrStatement = 35, 
		RULE_forDefinition = 36, RULE_whileDefinition = 37, RULE_genericDefenitionBlock = 38, 
		RULE_genericUsageBlock = 39, RULE_genericConstructorBlock = 40, RULE_genericWildcardTypeParameter = 41, 
		RULE_typeParameterConstraint = 42, RULE_operator = 43, RULE_booleanOperator = 44, 
		RULE_unaryOperator = 45, RULE_incDec = 46, RULE_boolean_composer = 47, 
		RULE_dottedWords = 48, RULE_throwsGroup = 49, RULE_modifier = 50, RULE_static = 51, 
		RULE_dottedWord = 52;
	private static String[] makeRuleNames() {
		return new String[] {
			"result", "packageBlock", "importBlock", "variableDefinition", "variableStatement", 
			"objectCall", "arg", "argList", "className", "classModifiers", "notPublicModifiers", 
			"class_static", "inner_classDefinition", "defModifier", "class_var_def", 
			"classDefinition", "constructorDefinition", "functionDefinition", "returnExpression", 
			"funcBlock", "static_var", "expression", "type", "number", "notQuoteWord", 
			"stringLiteral", "varName", "expressionList", "funcType", "funcName", 
			"funcCall", "booleanExpr", "ifBlock", "elseBlock", "ifDefinition", "exprOrStatement", 
			"forDefinition", "whileDefinition", "genericDefenitionBlock", "genericUsageBlock", 
			"genericConstructorBlock", "genericWildcardTypeParameter", "typeParameterConstraint", 
			"operator", "booleanOperator", "unaryOperator", "incDec", "boolean_composer", 
			"dottedWords", "throwsGroup", "modifier", "static", "dottedWord"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'[]'", "'new'", "'for'", "'while'", "'void'", "'import'", "'package'", 
			"'class'", "'if'", "'else'", null, null, null, "'+'", "'-'", "'*'", "'/'", 
			"'=='", "'!='", "'>='", "'<='", "'%'", "'++'", "'--'", "'~'", "'&'", 
			"'|'", "'&&'", "'||'", "'!'", "'?'", "'public'", "'private'", "'protected'", 
			"'abstract'", "'final'", "'throws'", "'return'", "'static'", "'extends'", 
			"'super'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", "'>'", "';'", 
			"'='", "'.'", "','", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "NEW", "FOR", "WHILE", "VOID", "IMPORT", "PACKAGE", "CLASS", 
			"IF", "ELSE", "DIG", "INTEGER", "FLOATING", "PLUS", "MINUS", "MULTIPLY", 
			"DIVIDE", "EQUAL", "NEQ", "GREATEROr_EQ", "LESSOr_EQ", "MOD", "INC", 
			"DEC", "UN_NOT", "BIN_AND", "BINOr", "AND", "OR", "NOT", "QUESTION_MARK", 
			"PUBLIC", "PRIVATE", "PROTECTED", "ABSTRACT", "FINAL", "THROWS", "RETURN", 
			"STATIC", "EXTENDS", "SUPER", "LBRACKET", "RBRACKET", "LSBRACKET", "RSBRACKET", 
			"LCBRACKET", "RCBRACKET", "LTBRACKET", "RTBRACKET", "SEMICOLON", "EQ", 
			"DOT", "COMMA", "QUOTE", "WORD", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JavaGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JavaGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ResultContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JavaGrammarParser.EOF, 0); }
		public PackageBlockContext packageBlock() {
			return getRuleContext(PackageBlockContext.class,0);
		}
		public ImportBlockContext importBlock() {
			return getRuleContext(ImportBlockContext.class,0);
		}
		public ClassDefinitionContext classDefinition() {
			return getRuleContext(ClassDefinitionContext.class,0);
		}
		public ResultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_result; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).enterResult(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).exitResult(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaGrammarVisitor ) return ((JavaGrammarVisitor<? extends T>)visitor).visitResult(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ResultContext result() throws RecognitionException {
		ResultContext _localctx = new ResultContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_result);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PACKAGE) {
				{
				setState(106);
				packageBlock();
				}
			}

			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(109);
				importBlock();
				}
				break;
			}
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 133143986432L) != 0)) {
				{
				setState(112);
				classDefinition();
				}
			}

			setState(115);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageBlockContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(JavaGrammarParser.PACKAGE, 0); }
		public DottedWordContext dottedWord() {
			return getRuleContext(DottedWordContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(JavaGrammarParser.SEMICOLON, 0); }
		public PackageBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).enterPackageBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).exitPackageBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaGrammarVisitor ) return ((JavaGrammarVisitor<? extends T>)visitor).visitPackageBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageBlockContext packageBlock() throws RecognitionException {
		PackageBlockContext _localctx = new PackageBlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(PACKAGE);
			setState(118);
			dottedWord();
			setState(119);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportBlockContext extends ParserRuleContext {
		public List<TerminalNode> IMPORT() { return getTokens(JavaGrammarParser.IMPORT); }
		public TerminalNode IMPORT(int i) {
			return getToken(JavaGrammarParser.IMPORT, i);
		}
		public List<DottedWordContext> dottedWord() {
			return getRuleContexts(DottedWordContext.class);
		}
		public DottedWordContext dottedWord(int i) {
			return getRuleContext(DottedWordContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(JavaGrammarParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(JavaGrammarParser.SEMICOLON, i);
		}
		public ImportBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).enterImportBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).exitImportBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaGrammarVisitor ) return ((JavaGrammarVisitor<? extends T>)visitor).visitImportBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportBlockContext importBlock() throws RecognitionException {
		ImportBlockContext _localctx = new ImportBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(121);
				match(IMPORT);
				setState(122);
				dottedWord();
				setState(123);
				match(SEMICOLON);
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDefinitionContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VariableStatementContext variableStatement() {
			return getRuleContext(VariableStatementContext.class,0);
		}
		public GenericUsageBlockContext genericUsageBlock() {
			return getRuleContext(GenericUsageBlockContext.class,0);
		}
		public VariableDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).enterVariableDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).exitVariableDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaGrammarVisitor ) return ((JavaGrammarVisitor<? extends T>)visitor).visitVariableDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDefinitionContext variableDefinition() throws RecognitionException {
		VariableDefinitionContext _localctx = new VariableDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variableDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			type();
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LTBRACKET) {
				{
				setState(131);
				genericUsageBlock();
				}
			}

			setState(134);
			variableStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableStatementContext extends ParserRuleContext {
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public TerminalNode EQ() { return getToken(JavaGrammarParser.EQ, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VariableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).enterVariableStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).exitVariableStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaGrammarVisitor ) return ((JavaGrammarVisitor<? extends T>)visitor).visitVariableStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableStatementContext variableStatement() throws RecognitionException {
		VariableStatementContext _localctx = new VariableStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			varName();
			setState(137);
			match(EQ);
			setState(138);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjectCallContext extends ParserRuleContext {
		public DottedWordContext dottedWord() {
			return getRuleContext(DottedWordContext.class,0);
		}
		public TerminalNode DOT() { return getToken(JavaGrammarParser.DOT, 0); }
		public FuncCallContext funcCall() {
			return getRuleContext(FuncCallContext.class,0);
		}
		public ObjectCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).enterObjectCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).exitObjectCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaGrammarVisitor ) return ((JavaGrammarVisitor<? extends T>)visitor).visitObjectCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectCallContext objectCall() throws RecognitionException {
		ObjectCallContext _localctx = new ObjectCallContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_objectCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			dottedWord();
			setState(141);
			match(DOT);
			setState(142);
			funcCall();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public GenericUsageBlockContext genericUsageBlock() {
			return getRuleContext(GenericUsageBlockContext.class,0);
		}
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).enterArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).exitArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaGrammarVisitor ) return ((JavaGrammarVisitor<? extends T>)visitor).visitArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgContext arg() throws RecognitionException {
		ArgContext _localctx = new ArgContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			type();
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LTBRACKET) {
				{
				setState(145);
				genericUsageBlock();
				}
			}

			setState(148);
			varName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgListContext extends ParserRuleContext {
		public List<ArgContext> arg() {
			return getRuleContexts(ArgContext.class);
		}
		public ArgContext arg(int i) {
			return getRuleContext(ArgContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JavaGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JavaGrammarParser.COMMA, i);
		}
		public ArgListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).enterArgList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).exitArgList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaGrammarVisitor ) return ((JavaGrammarVisitor<? extends T>)visitor).visitArgList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgListContext argList() throws RecognitionException {
		ArgListContext _localctx = new ArgListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_argList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			arg();
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(151);
				match(COMMA);
				setState(152);
				arg();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassNameContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(JavaGrammarParser.WORD, 0); }
		public ClassNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_className; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).enterClassName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).exitClassName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaGrammarVisitor ) return ((JavaGrammarVisitor<? extends T>)visitor).visitClassName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassNameContext className() throws RecognitionException {
		ClassNameContext _localctx = new ClassNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_className);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassModifiersContext extends ParserRuleContext {
		public TerminalNode ABSTRACT() { return getToken(JavaGrammarParser.ABSTRACT, 0); }
		public TerminalNode FINAL() { return getToken(JavaGrammarParser.FINAL, 0); }
		public ClassModifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classModifiers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).enterClassModifiers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).exitClassModifiers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaGrammarVisitor ) return ((JavaGrammarVisitor<? extends T>)visitor).visitClassModifiers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassModifiersContext classModifiers() throws RecognitionException {
		ClassModifiersContext _localctx = new ClassModifiersContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_classModifiers);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			_la = _input.LA(1);
			if ( !(_la==ABSTRACT || _la==FINAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NotPublicModifiersContext extends ParserRuleContext {
		public TerminalNode PROTECTED() { return getToken(JavaGrammarParser.PROTECTED, 0); }
		public TerminalNode PRIVATE() { return getToken(JavaGrammarParser.PRIVATE, 0); }
		public NotPublicModifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notPublicModifiers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).enterNotPublicModifiers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaGrammarListener ) ((JavaGrammarListener)listener).exitNotPublicModifiers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaGrammarVisitor ) return ((JavaGrammarVisitor<? extends T>)visitor).visitNotPublicModifiers(this);
			else return visitor.visitChildren(this);
		}
	}
